scrollbar corner fix

--- a/client/src/global.css
+++ b/client/src/global.css
@@ -20,7 +20,8 @@ html,
 }
 
 ::-webkit-scrollbar-corner {
-  
+  border-radius: 0.1rem;
+  /* background: #000; */
 }
 
 ::-webkit-scrollbar-thumb {
